force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_Location__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This Field captures the Location of the product</description>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Quote Lines</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>