force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_MaterialGroup__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_MaterialGroup__c</fullName>
    <formula>IF(AND(TEXT(SBQQ__Quote__r.PMC_CPQ_QuoteRecordSubType__c ) = &apos;Raw Material&apos;, TEXT(SBQQ__Product__r.PMC_CPQ_MaterialGroup__c) = &apos;Co-Product&apos;), TEXT(10 + PMC_CPQ_ApprovalRequired__c ),
 
IF(AND(TEXT(SBQQ__Quote__r.PMC_CPQ_QuoteRecordSubType__c) = &apos;Fertilizer&apos;, TEXT(SBQQ__Product__r.PMC_CPQ_MaterialGroup__c) = &apos;Co-Product&apos;), TEXT(20 + PMC_CPQ_ApprovalRequired__c ),
 
IF(TEXT(SBQQ__Product__r.PMC_CPQ_MaterialGroup__c) = &apos;Potash&apos; , TEXT(30 +  PMC_CPQ_ApprovalRequired__c ),
 
IF(TEXT(SBQQ__Product__r.PMC_CPQ_MaterialGroup__c) = &apos;Phosphate&apos; , TEXT(40 +  PMC_CPQ_ApprovalRequired__c ), &apos;00&apos; ) )))</formula>
    <label>Material Group</label>
    <type>Text</type>
</CustomField>