force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_MinimumPriceAdjustment__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_MinimumPriceAdjustment__c</fullName>
    <label>Minimum Price Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>