force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_ModeofTransportation__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ModeofTransportation__c</fullName>
    <description>This field is created  to check The mode of transportation</description>
    <inlineHelpText>Select the appropriate mode from the available options to track and manage logistics effectively</inlineHelpText>
    <label>MoT</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PMC_CPQ_QuoteRecordType__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>PMC_CPQ_MoT</valueSetName>
    </valueSet>
</CustomField>