force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_NALineTotalPriceFormula__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_NALineTotalPriceFormula__c</fullName>
    <formula>(SBQQ__ListPrice__c + PMC_CPQ_Discount__c + PMC_CPQ_VolumeDiscount__c + PMC_CPQ_EstFreightPrice__c)* SBQQ__EffectiveQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NA Line Total Price Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>