force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_Netback__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Netback__c</fullName>
    <description>This field is created  to check Price without Logistic Charges</description>
    <label>Netback</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>