force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_NetTotalPrice__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_NetTotalPrice__c</fullName>
    <description>Created as part of GDASF-6987, where this field get the value from the Get Price response callout.</description>
    <label>Net Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>