force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_Nitrogen__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Nitrogen__c</fullName>
    <label>Nitrogen %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>