force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_NumberofRailCars__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_NumberofRailCars__c</fullName>
    <description>As per Cheat Sheet for Customer Service.</description>
    <label>Number of Rail Cars</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>