force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_OpportunityLineItemId__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_OpportunityLineItemId__c</fullName>
    <description>This field is created  to check The opportunity line item value.</description>
    <label>OpportunityLineItemId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>