force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_OriginalQuantity__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_OriginalQuantity__c</fullName>
    <defaultValue>0</defaultValue>
    <description>To capture the Original Quantity of quote line during initial configuration</description>
    <label>Original Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>