force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_PaymentTermsApprovalRequired__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PaymentTermsApprovalRequired__c</fullName>
    <description>This field compares the payment term on quote with account. If the payment terms of the quote is higher, it indicates that approval is required.</description>
    <formula>IF( RIGHT(LEFT(TEXT(PMC_CPQ_PaymentTerms__c),6),1)=&quot; &quot;,IF(VALUE(RIGHT(LEFT(TEXT(PMC_CPQ_PaymentTerms__c),5),1))&gt;VALUE(RIGHT(LEFT(TEXT(PMC_CPQ_Account__r.PMC_CPQ_PaymentTerms__c),5),1)),1,0),IF((VALUE(MID(TRIM(LEFT( TEXT(PMC_CPQ_PaymentTerms__c),7)), 5, 7)))&gt;(VALUE(MID(TRIM(LEFT(TEXT(PMC_CPQ_Account__r.PMC_CPQ_PaymentTerms__c),7)), 5, 7))),1, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Terms Approval Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>