force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_PercentageOfQuantity__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PercentageOfQuantity__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field is to capture percentage of original Quantity at quote line editor</description>
    <label>% Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>