force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_PermittedQuantity__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PermittedQuantity__c</fullName>
    <formula>IF(AND(SBQQ__Quote__r.PMC_CPQ_QuoteApproved__c, ROUND(PMC_CPQ_OriginalQuantity__c,0) &gt;= SBQQ__Quantity__c),0,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Permitted Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>