force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_PortDetail__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PortDetail__c</fullName>
    <description>This field is created  to check Port details</description>
    <label>Port Detail</label>
    <length>18</length>
    <type>Text</type>
</CustomField>