force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_PortSelection__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PortSelection__c</fullName>
    <description>This field is created  to check port selection</description>
    <label>Port Selection</label>
    <length>18</length>
    <type>Text</type>
</CustomField>