force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_Prepay__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Prepay__c</fullName>
    <description>Created as part of GDASF-18410. This field will check for Payment Terms to check the checkbox.</description>
    <formula>If(ISPICKVAL(PMC_CPQ_PaymentTerms__c , &apos;Prepayment&apos;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Prepay Indicator (depends on Payment Terms)</inlineHelpText>
    <label>Prepay</label>
    <type>Checkbox</type>
</CustomField>