force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_PriceAdjustmentBR__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PriceAdjustmentBR__c</fullName>
    <formula>(PMC_CPQ_CustomerPrice__c - SBQQ__ListPrice__c - PMC_CPQ_EstFreightPrice__c - PMC_CPQ_CostAdjustment__c - PMC_CPQ_MarginAdjustment__c - PMC_CPQ_VCOAdjustment__c * IF(ISPICKVAL( CurrencyIsoCode ,&apos;USD&apos;),1, PMC_CPQ_ExchangeRate__c )
-(( PMC_CPQ_EstTax__c / PMC_CPQ_FinalPricePerTonne__c )* PMC_CPQ_CustomerPrice__c )
-(( PMC_CPQ_CustomerPrice__c -(( PMC_CPQ_EstTax__c / PMC_CPQ_FinalPricePerTonne__c )* PMC_CPQ_CustomerPrice__c )) - ( PMC_CPQ_CustomerPrice__c -(( PMC_CPQ_EstTax__c / PMC_CPQ_FinalPricePerTonne__c )* PMC_CPQ_CustomerPrice__c )) /(1 +PMC_CPQ_InterestFees__c/30 *PMC_CPQ_InterestPeriod__c))
- PMC_CPQ_Commission__c *
(
PMC_CPQ_CustomerPrice__c -
(
( PMC_CPQ_EstTax__c / PMC_CPQ_FinalPricePerTonne__c )* PMC_CPQ_CustomerPrice__c
)-
(( PMC_CPQ_CustomerPrice__c -(( PMC_CPQ_EstTax__c / PMC_CPQ_FinalPricePerTonne__c )* PMC_CPQ_CustomerPrice__c )) - ( PMC_CPQ_CustomerPrice__c -(( PMC_CPQ_EstTax__c / PMC_CPQ_FinalPricePerTonne__c )* PMC_CPQ_CustomerPrice__c )) /(1 +PMC_CPQ_InterestFees__c/30 *PMC_CPQ_InterestPeriod__c))-
PMC_CPQ_EstFreightPrice__c
))/ IF(ISPICKVAL( CurrencyIsoCode ,&apos;USD&apos;),1, PMC_CPQ_ExchangeRate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Adjustment BR</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>