force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_PriceAdjustmentNA__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PriceAdjustmentNA__c</fullName>
    <formula>PMC_CPQ_CustomerPrice__c - SBQQ__ListPrice__c - PMC_CPQ_EstFreightPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Adjustment NA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>