force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_PriceByDateDisplay__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PriceByDateDisplay__c</fullName>
    <description>This field is created  to  display price by date.</description>
    <formula>&quot; &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price By Date Display</label>
    <type>Text</type>
</CustomField>