force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_PriceDueDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PriceDueDate__c</fullName>
    <description>This field is created  to check The price due date.</description>
    <label>Price Due Date</label>
    <type>Date</type>
</CustomField>