force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_PriceGuidanceLast__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PriceGuidanceLast__c</fullName>
    <label>Price Guidance Last</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>