force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_PriceIndicator__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PriceIndicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is created   to indicate whether customer has budget or price. Only applicable for BR.</description>
    <label>Price Indicator</label>
    <type>Checkbox</type>
</CustomField>