force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_PriceOverride__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PriceOverride__c</fullName>
    <description>This field is created  to check price markup/ markdown value.</description>
    <label>Price Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>