force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_PricingFormula__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PricingFormula__c</fullName>
    <description>This field is created to get price formula from Pricefx specific to International Sales conditions</description>
    <label>Contract Price Calculation</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>