force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_ProductLocation__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ProductLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This Field captures the Location of the product.</description>
    <label>Product Location</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>$Source.SBQQ__Product__c</field>
            <operation>equals</operation>
            <valueField>PMC_CPQ_ProductLocation__c.PMC_CPQ_ProductName__c</valueField>
        </filterItems>
        <filterItems>
            <field>PMC_CPQ_ProductLocation__c.PMC_CPQ_Location__r.RecordTypeId</field>
            <operation>equals</operation>
            <value>Origin Location</value>
        </filterItems>
        <infoMessage>Select Product Location Columns Link to add appropriate Locations</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PMC_CPQ_ProductLocation__c</referenceTo>
    <relationshipLabel>Quote Lines</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>