force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_ProductLocationLocationBackend__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ProductLocationLocationBackend__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProductLocation-Location(Backend)</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>CPQ Quote Lines (ProductLocation-Location(Backend))</relationshipLabel>
    <relationshipName>CPQ_Quote_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>