force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_ProductPackageTypeIndicator__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ProductPackageTypeIndicator__c</fullName>
    <description>This field is to indicate if the Package Type on Product is loaded or not.</description>
    <formula>IF(!ISPICKVAL( SBQQ__Product__r.PMC_CPQ_PackageType__c , &apos;&apos;) ,  true , false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product PackageType Indicator</label>
    <type>Checkbox</type>
</CustomField>