force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_ProductPackTypeIndicator__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ProductPackTypeIndicator__c</fullName>
    <formula>IF(!ISPICKVAL(  SBQQ__Product__r.PMC_CPQ_PackType__c  , &apos;&apos;) , true , false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product PackType Indicator</label>
    <type>Checkbox</type>
</CustomField>