force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_ProductType__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ProductType__c</fullName>
    <formula>Text( SBQQ__Product__r.PMC_CPQ_ProductTypes__c)</formula>
    <label>Product Type</label>
    <type>Text</type>
</CustomField>