force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_ProductTypes__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ProductTypes__c</fullName>
    <label>Product Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProductType</valueSetName>
    </valueSet>
</CustomField>