force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_PublicationPrice__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PublicationPrice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Publication Price</label>
    <type>Checkbox</type>
</CustomField>