force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_QuoteApprovedExtractor__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_QuoteApprovedExtractor__c</fullName>
    <formula>SBQQ__Quote__r.PMC_CPQ_QuoteApproved__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Approved Extractor</label>
    <type>Checkbox</type>
</CustomField>