force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_QuoteClassification__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_QuoteClassification__c</fullName>
    <label>Quote Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bid</fullName>
            </value>
            <value>
                <fullName>Deal</fullName>
            </value>
            <value>
                <fullName>List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>