force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_QuoteClassificationExt__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_QuoteClassificationExt__c</fullName>
    <formula>TEXT(SBQQ__Quote__r.PMC_CPQ_QuoteClassification__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Classification Ext</label>
    <type>Text</type>
</CustomField>