force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_QuoteCustomerSegmentExtractor__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_QuoteCustomerSegmentExtractor__c</fullName>
    <formula>TEXT(SBQQ__Quote__r.SBQQ__Account__r.PMC_SS_CustomerType__c)</formula>
    <label>Quote Customer Segment Extractor</label>
    <type>Text</type>
</CustomField>