force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_QuoteLineSelfId__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_QuoteLineSelfId__c</fullName>
    <description>This field is created to populate this Quote Line id on the amended Quote line</description>
    <label>Quote Line Self Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>