force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_QuoteLineSelfLookupBackend__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_QuoteLineSelfLookupBackend__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line Self Lookup</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>CPQ Quote Lines (Quote Line Self Lookup)</relationshipLabel>
    <relationshipName>CPQ_Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>