force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_QuoteRecordSubType__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_QuoteRecordSubType__c</fullName>
    <description>This field will indicate the business type of the associated Quote and will be used as Controlling field for other dependent fields.</description>
    <inlineHelpText>adding helptext for poc</inlineHelpText>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PMC_CPQ_QuoteRecordType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Feed</fullName>
            </value>
            <value>
                <fullName>Fertilizer</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Raw Material</fullName>
            </value>
            <value>
                <fullName>Co-Products</fullName>
            </value>
            <value>
                <fullName>B2C - Fertilizer</fullName>
            </value>
            <value>
                <fullName>B2B - Feed</fullName>
            </value>
            <value>
                <fullName>B2B - Fertilizer</fullName>
            </value>
            <value>
                <fullName>B2B - Specialties</fullName>
            </value>
            <value>
                <fullName>B2C - Paraguay</fullName>
            </value>
            <value>
                <fullName>B2B - Potash</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Raw Materials</fullName>
                <isActive>false</isActive>
                <label>Raw Materials</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>