force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_QuoteRecordSubTypeExtractor__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_QuoteRecordSubTypeExtractor__c</fullName>
    <formula>TEXT( SBQQ__Quote__r.PMC_CPQ_QuoteRecordSubType__c )</formula>
    <label>Quote Record Sub-Type Extractor</label>
    <type>Text</type>
</CustomField>