force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_QuoteRecordType__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_QuoteRecordType__c</fullName>
    <description>This picklist will hold the record type of Quote and will be used as a controlling field for many other picklist fields.</description>
    <label>Quote Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic NA</fullName>
            </value>
            <value>
                <fullName>Domestic SA</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>International Distribution</fullName>
            </value>
            <value>
                <fullName>Domestic BR</fullName>
                <isActive>false</isActive>
                <label>Domestic BR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>