force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_QuoteRecordTypeNameExt__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_QuoteRecordTypeNameExt__c</fullName>
    <formula>SBQQ__Quote__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Record Type Name Ext</label>
    <type>Text</type>
</CustomField>