force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_QuoteRegion__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_QuoteRegion__c</fullName>
    <description>This field to fetch quote region to quote line</description>
    <label>Quote Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>