force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_QuoteRegionExtractor__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_QuoteRegionExtractor__c</fullName>
    <formula>TEXT(SBQQ__Quote__r.PMC_CPQ_Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Region Extractor</label>
    <type>Text</type>
</CustomField>