force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_QuoteStatusExtractor__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_QuoteStatusExtractor__c</fullName>
    <description>To extract quote status to quote line</description>
    <formula>TEXT(SBQQ__Quote__r.SBQQ__Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Status Extractor</label>
    <type>Text</type>
</CustomField>