force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_QuoteValidityDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_QuoteValidityDate__c</fullName>
    <description>This field is created  to check the validity date of a quote</description>
    <label>Quote Validity Date</label>
    <type>Date</type>
</CustomField>