force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_SalesAgreementAvailability__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SalesAgreementAvailability__c</fullName>
    <formula>IF(ISBLANK(SBQQ__Quote__r.SBQQ__Opportunity2__r.PMC_SS_SalesAgreement__c ), false, true )</formula>
    <label>Sales Agreement Availability</label>
    <type>Checkbox</type>
</CustomField>